Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -71,12 +71,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([   2.,   12.,   84.,  432., 1001., 1471., 1239.,  594.,  144.,\n",
+       "          21.]),\n",
+       " array([ 2.06759917,  4.18213697,  6.29667478,  8.41121258, 10.52575038,\n",
+       "        12.64028818, 14.75482598, 16.86936378, 18.98390159, 21.09843939,\n",
+       "        23.21297719]),\n",
+       " <a list of 10 Patch objects>)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Calculate a histogram for above data distribution\n",
-    "import matplotlib.plot as plt\n",
+    "import matplotlib.pyplot as plt\n",
     "plt.hist(s)"
    ]
   },
