Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -93,7 +93,8 @@
    "source": [
     "# Calculate a histogram for above data distribution\n",
     "import matplotlib.pyplot as plt\n",
-    "plt.hist(s)"
+    "plt.hist(s)\n",
+    "count, bins, ignored = plt.hist(s, 20, density=True)"
    ]
   },
   {
