Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -135,7 +135,7 @@
    ],
    "source": [
     "# Plot histogram along with the density function\n",
-    "plt.hist(s,)"
+    "plt.hist(s,20,normed=True)\n"
    ]
   },
   {
