Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -160,6 +160,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import seaborn as sns\n",
+    "sns.distplot(s, bins=20, kde=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [
@@ -185,7 +195,7 @@
     }
    ],
    "source": [
-    "# Use seaborn to plot the histogram with KDE\n"
+    "im"
    ]
   },
   {
